💄 fixed margin collapsing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,12 +76,11 @@ html {
   height: 100%; 
 
   .contents-wrapper { 
-    display: flex;
-    height: 50%;
+    display: flex; 
     width: 60%;
     flex-direction: column;
     justify-content: space-evenly;
-    .main-text {
+    .main-text { 
       font-size: 2.6rem;
       font-weight: 700;
       line-height: 60px; 
@@ -120,8 +119,13 @@ html {
     display: flex;  
     flex-direction: row;
     align-items: center;   
+    margin: 10% 0;
 
     .image-wrapper{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       width: 60%; 
       height: 350px;
       overflow: hidden; 
@@ -181,7 +185,10 @@ html {
         text-align: center;  
   
         div{
-          display: inline; 
+          display: flex; 
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
           box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
           width: 30%; 
           height: 90%;
@@ -201,8 +208,7 @@ html {
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      width: 70%;
-      margin: 70px 0;
+      width: 70%;  
 
       .desc-text{
         width: 70%;
@@ -401,6 +407,7 @@ footer {
 // mediaquery
 @media (max-width: 390px) {
   // 헤더 
+
   .header { 
     width: 100vw;  
     position: fixed;  
@@ -432,30 +439,33 @@ footer {
   // 메인 
 
   .main {  
+    height: 130vh;
     .section-main { 
+      height: 100%;
       .contents-wrapper {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        margin-top: 30%;
-        width: 100%;  
+        justify-content: center;
+        align-items: center; 
         text-align: center;
+        width: 100%;  
         .main-text {
+          margin-top: 150px;
           font-size: 1.5rem;
           font-weight: 700;
           line-height: 1.5; 
         }
         .desc-text {
           font-size: 0.9rem;
+        } 
+        .button-download {
+          margin-top: 50px;
         }
-      }
-      // 이미지 추후 작업하기
-      .image-main {
-        display: none;
-        width: 190px;
-        top: 70%;
-        right: 20%; 
+        .image-main { 
+          margin-top: 20px;
+          width: 180px;   
+          position: static; 
+        }
       }
     } 
   }
@@ -496,26 +506,26 @@ footer {
       }
       .wrapper-window {
         width: 300px;
-        height: 300px;
+        height: 300px; 
 
         .wrapper-image { 
           align-items: center; 
-          width: 1000px;
-          background-color: palevioletred;
+          width: 1000px; 
           div {
             width: 300px;
             height: 300px;  
           }
         }
-
       }
       .contents-wrapper {
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%; 
+        height: 300px; 
         .desc-text {
-          width: 100%;
+          margin-top: 50px;
+          width: 100%; 
           text-align: center;
         }
         .button-learn {
